[package]
name = "rustboy"
version = "0.1.0"
authors = ["Jonatan Magnusson <jonatan.magnusson@gmail.com>"]

[dependencies]
ctrlc = "3.1.6"
sdl2 = "0.34.2"
ansi_term = "0.12.1"
# serde = "*"
clap = "*"
png = "0.14.0"
num-traits = "*"
# imgui = "0.7"
# imgui-sdl2 = "*"
# imgui-opengl-renderer = "*"
gl = "0.10.0"
# eframe = "0.16.0"
image="*"
# glium = "0.31"
egui="0.16.1"
# egui_glium = "0.16.0"
