[package]
name = "rustboy"
version = "0.1.0"
authors = ["Jonatan Magnusson <jonatan.magnusson@gmail.com>"]
edition = "2018"

[dependencies]
ctrlc = "3.1.6"
sdl2 = "0.34.2"
ansi_term = "0.12.1"
serde = "*"
clap = "*"
png = "0.14.0"
num-traits = "*"
gl = "0.10.0"
image="*"
egui="0.16.0"
epi="0.16.0"
glow="0.11"
egui-winit="0.16.0"
glutin="0.28.0"
egui_glow="0.16.0"
# eframe="0.16.0"
egui_glium="0.16.0"
glium="0.31"