[package]
authors = ["Jonatan Magnusson <jonatan.magnusson@gmail.com>"]
edition = "2018"
name = "rustboy"
resolver = "2"
version = "0.1.0"

[features]
default = ["full-ui", "minimal-ui"]
full-ui = []
minimal-ui = []

[dependencies]
ansi_term = "0.12.1"
clap = "*"
cpal = "0.13.4"
ctrlc = "3.1.6"
egui = "0.16"
egui-winit = "0.16.0"
egui_demo_lib = "0.16"
egui_wgpu_backend = "0.16"
egui_winit_platform = "0.13"
epi = "0.16"
# image = "*"
chrono = "0.4"
hound = "3.4.0"
num-traits = "*"
png = "0.14.0"
pollster = "0.2"
ringbuf = "0.2.6"
sdl2 = "0.34.2"
serde = "*"
wgpu = "0.12"
winit = "0.26"
